--- a/index.html
+++ b/index.html
@@ -44,23 +44,25 @@
   <main class="main__container clearfix">
     <div class="contain">
       <aside class="container__menu clearfix">
-        <ul class="container__menu-list">
-          <li class="container__menu-item">
-            <a class="container__menu-item-link" href="index.html">
-              <img class="container__menu-item-pic" src="img/menu/main-icon.png" alt="главная  лого"> главная
-            </a>
-          </li>
-          <li class="container__menu-item">
-            <a class="container__menu-item-link" href="reviews.html">
-              <img class="container__menu-item-pic" src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
-            </a>
-          </li>
-          <li class="container__menu-item">
-            <a class="container__menu-item-link" href="#">
-              <img class="container__menu-item-pic" src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
-            </a>
-          </li>
-        </ul>
+        <nav class="container__menu-block">
+          <ul class="container__menu-list">
+            <li class="container__menu-item">
+              <a class="container__menu-item-link" href="index.html">
+                <img class="container__menu-item-pic" src="img/menu/main-icon.png" alt="главная  лого"> главная
+              </a>
+            </li>
+            <li class="container__menu-item">
+              <a class="container__menu-item-link" href="reviews.html">
+                <img class="container__menu-item-pic" src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
+              </a>
+            </li>
+            <li class="container__menu-item">
+              <a class="container__menu-item-link" href="#">
+                <img class="container__menu-item-pic" src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
+              </a>
+            </li>
+          </ul>
+        </nav>
       </aside>
       <div class="container__allcontent clearfix">
         <section class="container__features clearfix">
@@ -219,28 +221,28 @@
         <p class="footer__social-text">Наши социальные сети</p>
         <ul class="footer__social-list">
           <li class="footer__social__logo">
-            <a href="#">
-              <img src="img/social/vk.png" alt="вконтакте">
+            <a class="footer__social-vk" href="#">
+              <div class="footer__social-vk-img"></div>
             </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#">
-              <img src="img/social/fb.png" alt="фейсбук">
+            <a class="footer__social-fb" href="#">
+              <div class="footer__social-fb-img"></div>
             </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#">
-              <img src="img/social/google.png" alt="гугл">
+            <a class="footer__social-google" href="#">
+              <div class="footer__social-google-img"></div>
             </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#">
-              <img src="img/social/twitter.png" alt="твиттер">
+            <a class="footer__social-twitter" href="#">
+              <div class="footer__social-twitter-img"></div>
             </a>
           </li>
           <li class="footer__social__logo">
-            <a href="#">
-              <img src="img/social/mail.png" alt="почта">
+            <a class="footer__social-mail" href="#">
+              <div class="footer__social-mail-img"></div>
             </a>
           </li>
         </ul>
