--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </a>
             </li>
             <li class="container__menu-item">
-              <a class="container__menu-item-link" href="#">
+              <a class="container__menu-item-link" href="rates.html">
                 <img class="container__menu-item-pic" src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
               </a>
             </li>
