--- a/rates.html
+++ b/rates.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./rates.css">
 	<link rel="shorcut icon" href="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/computer-32.png">
-	<title>Отзывы</title>
+	<title>Тарифы</title>
 </head>
 
 <body>
@@ -72,13 +72,13 @@
 								<a class="breadcrumbs__item-link" href="./index.html">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<a class="breadcrumbs__item-link breadcrumbs__item-link--active" href="#">Тарифы</a>
+								<p class="breadcrumbs__item-link breadcrumbs__item-link--active" href="#">Тарифы</p>
 							</li>
 						</ul>
 					</div>
 
 					<div class="content__rates-block">
-						<h1 class="rates-block__heading">Отзывы</h1>
+						<h1 class="rates-block__heading">Тарифы</h1>
 						<ul class="rates-block__list">
 							<li class="rates-block__item">
 								<div class="rates-block__item-img"></div>
