--- a/reviews.html
+++ b/reviews.html
@@ -71,7 +71,7 @@
 								<a class="breadcrumbs__item-link" href="./index.html">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
-								<a class="breadcrumbs__item-link breadcrumbs__item-link--active" href="#">Отзывы</a>
+								<p class="breadcrumbs__item-link breadcrumbs__item-link--active">Отзывы</p>
 							</li>
 						</ul>
 					</div>
@@ -208,8 +208,8 @@
 					<div class="review-adding__radio-buttons">
 						<span class="review-adding__radio-buttons__question">Отображать фото в отзыве?</span> <br>
 						<div class="review-adding__two-buttons">
-							<label><input type="radio" name="yes/no">Да</label>
-							<label><input type="radio" name="yes/no">Нет</label>
+							<label class="radio-button"><input class="radio-button-input" type="radio" name="yes/no"><p class="radio-button--style"></p><span class="answer">Да</span></label>
+							<label class="radio-button"><input class="radio-button-input" type="radio" name="yes/no"><p class="radio-button--style"></p><span class="answer">Нет</span></label>
 						</div>
 						<button class="review-adding__button-submit" type="submit">Отправить</button>
 					</div>
