--- a/reviews.html
+++ b/reviews.html
@@ -227,8 +227,8 @@
     <div class="contain">
       <div class="footer__text">
         <p class="footer__text-made-by">Сделано с любовью и старанием<br> на курсе «HTML + CSS» в
-          <b>LoftSchool.</b> Автор работы:
-          <b>Казаков Роман</b>
+          <b class="footer--font-weight">LoftSchool.</b> Автор работы:
+          <b class="footer--font-weight">Казаков Роман</b>
         </p>
       </div>
       <div class="footer__logo">
