--- a/rates.html
+++ b/rates.html
@@ -81,37 +81,61 @@
 						<h1 class="rates-block__heading">Тарифы</h1>
 						<ul class="rates-block__list">
 							<li class="rates-block__item">
-								<div class="rates-block__item-img"></div>
-								<div class="rates-block__item-text">800 руб/мес 
-									или 100 руб/сутки
+								<div class="rates-block__item-img bg1">
+									<div class="block__item-opacity">
+										<p class="block__item-opacity__text">«Один»</p>
+									</div>
+								</div>
+								<div class="rates-block__item-text"><h3 class="rates-block__item-heading">800 руб/мес 
+									или 100 руб/сутки</h3>
 									Оплачивается рабочее место на 1 человека. Есть возможность оплаты с привязкой к определенному физическому месту. При оплате за год, скидка 30%.</div>
 							</li>
 							<li class="rates-block__item">
-								<div class="rates-block__item-img"></div>
-								<div class="rates-block__item-text">1 500 руб/мес
-									или 200 руб/сутки
+								<div class="rates-block__item-img bg2">
+									<div class="block__item-opacity">
+										<p class="block__item-opacity__text">«Трое»</p>
+									</div>
+								</div>
+								<div class="rates-block__item-text"><h3 class="rates-block__item-heading">1 500 руб/мес
+									или 200 руб/сутки</h3>
 									Оплачивается стол на 3 рабочих места. При этом можно ими пользоваться как одновременно, так и поочередно. Можно пользоваться офисной техникой и выделенным шкафом для документов.</div>
 							</li>
 							<li class="rates-block__item">
-								<div class="rates-block__item-img"></div>
-								<div class="rates-block__item-text">10 000 руб/мес
+								<div class="rates-block__item-img bg3">
+									<div class="block__item-opacity">
+										<p class="block__item-opacity__text">«10-10»</p>
+									</div>
+								</div>
+								<div class="rates-block__item-text"><h3 class="rates-block__item-heading">10 000 руб/мес</h3>
 									Оплачивается 10 рабочих мест на любые 10 дней месяца. Отлично подходит для периодической работы команды сотрудников без строгой привязки к рабочему месту. При оплате на год вперед скидка 25%</div>
 							</li>
 							<li class="rates-block__item">
-								<div class="rates-block__item-img"></div>
-								<div class="rates-block__item-text">2 500 руб/мес
+								<div class="rates-block__item-img bg4">
+									<div class="block__item-opacity">
+										<p class="block__item-opacity__text"><b class="block__item-opacity__text--red">Vip</b> «Безлимит на одного»</p>
+									</div>
+								</div>
+								<div class="rates-block__item-text"><h3 class="rates-block__item-heading">2 500 руб/мес</h3>
 									В стоимость включена не только оплата рабочего места, но и пользование копировальной техникой, бесплатный кофе или чай в течение дня, возможность использования зала для переговоров при предварительном бронировании 1 раз в месяц.</div>
 							</li>
 							<li class="rates-block__item">
-								<div class="rates-block__item-img"></div>
-								<div class="rates-block__item-text">Цена рассчитывается индивидуально
+								<div class="rates-block__item-img bg5">
+									<div class="block__item-opacity">
+										<p class="block__item-opacity__text"><b class="block__item-opacity__text--red">Vip</b> «Всё включено»</p>
+									</div>
+								</div>
+								<div class="rates-block__item-text"><h3 class="rates-block__item-heading">Цена рассчитывается индивидуально</h3>
 									Оплачивается необходимое число рабочих мест с привязкой к фактическому местонахождению. 
 									В стоимость включены рабочие столы, мебель для хранения документов, отдельный принтер 
 									и копировальный автомат. </div>
 							</li>
 							<li class="rates-block__item">
-								<div class="rates-block__item-img"></div>
-								<div class="rates-block__item-text">2 500 руб/час — 
+								<div class="rates-block__item-img bg6">
+									<div class="block__item-opacity">
+										<p class="block__item-opacity__text">«Переговоры»</p>
+									</div>
+								</div>
+								<div class="rates-block__item-text"><h3 class="rates-block__item-heading">2 500 руб/час —</h3>
 									Аренда среднего зала. Есть возможность раннего бронирования конференц-залов 
 									со скидкой до 30% при полной предоплате.</div>
 							</li>
