--- a/rates.html
+++ b/rates.html
@@ -182,7 +182,7 @@
         </p>
       </div>
       <div class="footer__logo">
-        <img src="img/logo-fig.png" alt="логотип компании">
+        <a class="main__link" href="index.html"><img src="img/logo-fig.png" alt="логотип компании"></a>
       </div>
       <div class="footer__social">
         <p class="footer__social-text">Наши социальные сети</p>
