--- a/intro.html
+++ b/intro.html
@@ -10,20 +10,22 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="intro.css">
+    <link rel="stylesheet" href="./css/animate.css">
     <link rel="shorcut icon" href="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/computer-32.png">
     <title>Coworking</title>
   </head>
 <body>
   <div class="wrapper__intro">
-
+  <div class="wrapper__intro--opacity"></div>
     
-    <div class="intro__logo">
+    <div class="intro__logo animated flash">
       <img class="intro__logo__pic" src="./img/intro/logo.png" alt="логотип компания коворкинг">
       
       <div class="intro__logo__link">
         <a href="./index.html" class="intro__logo__link-to">Перейти на сайт</a>
       </div>
     </div>
+  
   </div>
 </body>
 </html>
