--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
           <div class="header__top-item--right">
             <div class="contacts">
               <a href="tel:+78000039210" class="number">8(800)00-392-10</a>
-              <a href="#" class="schedule_dropped">График работы</a>
+              <div class="schedule__dropped-block">
+                <a href="#" class="schedule_dropped">График работы</a>
+                <div class="dropdown__schedule">
+                  <ul class="dropdown__list">
+                    <li class="dropdown__item1">пн-вс:  09:00-20:00</li>
+                    <li class="dropdown__item2">обед:   14:00-14:30</li>
+                  </ul>
+                  <div  class="dropdown__schedule_triangle"></div>
+                </div>  
+              </div>
             </div>
 
-            <div class="dropdown__shedule">
-              <ul class="dropdown__list">
-                <li class="dropdown__item1">пн-вс: 09:00-20:00</li>
-                <li class="dropdown__item2">обед: 14:00-14:30</li>
-              </ul>
-              <div class="dropdown__schedule_triangle"></div>
-            </div>
+
+            
           </div>
 
         </div>
@@ -55,18 +59,21 @@
         <nav class="container__menu-block">
           <ul class="container__menu-list">
             <li class="container__menu-item">
-              <a class="container__menu-item-link" href="index.html">
-                <img class="container__menu-item-pic" src="img/menu/main-icon.png" alt="главная  лого"> главная
+              <a class="container__menu-item-link" href="index.html"> 
+                <span class="menu-item-main"></span>
+                 главная
               </a>
             </li>
             <li class="container__menu-item">
               <a class="container__menu-item-link" href="reviews.html">
-                <img class="container__menu-item-pic" src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
+                  <span class="menu-item-star"></span>
+                   отзывы
               </a>
             </li>
             <li class="container__menu-item">
               <a class="container__menu-item-link" href="rates.html">
-                <img class="container__menu-item-pic" src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
+                  <span class="menu-item-wallet"></span>
+                   тарифы
               </a>
             </li>
           </ul>
