--- a/index.html
+++ b/index.html
@@ -59,21 +59,18 @@
         <nav class="container__menu-block">
           <ul class="container__menu-list">
             <li class="container__menu-item">
-              <a class="container__menu-item-link" href="index.html"> 
-                <span class="menu-item-main"></span>
-                 главная
+              <a class="container__menu-item-link menu-item-main menu-optimisation" href="index.html"> 
+                 <span class="text__pos1">главная</span>
               </a>
             </li>
             <li class="container__menu-item">
-              <a class="container__menu-item-link" href="reviews.html">
-                  <span class="menu-item-star"></span>
-                   отзывы
+              <a class="container__menu-item-link menu-item-star menu-optimisation" href="reviews.html">
+                <span class="text__pos2">отзывы</span>
               </a>
             </li>
             <li class="container__menu-item">
-              <a class="container__menu-item-link" href="rates.html">
-                  <span class="menu-item-wallet"></span>
-                   тарифы
+              <a class="container__menu-item-link menu-item-wallet menu-optimisation" href="rates.html">
+                <span class="text__pos3">тарифы</span>
               </a>
             </li>
           </ul>
