--- a/reviews.html
+++ b/reviews.html
@@ -45,23 +45,23 @@
 				<aside class="container__menu clearfix">
 					<nav class="container__menu-block">
 						<ul class="container__menu-list">
-						<li class="container__menu-item">
-							<a class="container__menu-item-link" href="index.html">
-								<img class="container__menu-item-pic" src="img/menu/main-icon.png" alt="главная  лого"> главная
-							</a>
-						</li>
-						<li class="container__menu-item">
-							<a class="container__menu-item-link" href="reviews.html">
-								<img class="container__menu-item-pic" src="img/menu/feed-icon.png" alt="отзывы лого"> отзывы
-							</a>
-						</li>
-						<li class="container__menu-item">
-							<a class="container__menu-item-link" href="rates.html">
-								<img class="container__menu-item-pic" src="img/menu/wallet-icon.png" alt="тарифы   лого"> тарифы
-							</a>
-						</li>
+							<li class="container__menu-item">
+								<a class="container__menu-item-link menu-item-main menu-optimisation" href="index.html"> 
+									 <span class="text__pos1">главная</span>
+								</a>
+							</li>
+							<li class="container__menu-item">
+								<a class="container__menu-item-link menu-item-star menu-optimisation" href="reviews.html">
+									<span class="text__pos2">отзывы</span>
+								</a>
+							</li>
+							<li class="container__menu-item">
+								<a class="container__menu-item-link menu-item-wallet menu-optimisation" href="rates.html">
+									<span class="text__pos3">тарифы</span>
+								</a>
+							</li>
 						</ul>
-					</nav>	
+					</nav>
 				</aside>
 
 				<section class="content clearfix">
