--- a/rates.html
+++ b/rates.html
@@ -23,7 +23,7 @@
 				<div class="contain clearfix">
 
 					<div class="header__top-item--left">
-						<a href="./index.html">
+						<a href="./main.html">
 						<img class="header__top-item-logo" src="img/logo-fig.png" alt="логотип компании">
 						</a>
 					</div>
@@ -47,7 +47,7 @@
 					<nav class="container__menu-block">
 						<ul class="container__menu-list">
 							<li class="container__menu-item">
-								<a class="container__menu-item-link menu-item-main menu-optimisation" href="index.html"> 
+								<a class="container__menu-item-link menu-item-main menu-optimisation" href="main.html"> 
 									 <span class="text__pos1">главная</span>
 								</a>
 							</li>
@@ -57,9 +57,9 @@
 								</a>
 							</li>
 							<li class="container__menu-item">
-								<a class="container__menu-item-link menu-item-wallet menu-optimisation" href="rates.html">
+								<span class="container__menu-item-link menu-item-wallet menu-optimisation active3">
 									<span class="text__pos3">тарифы</span>
-								</a>
+								</span>
 							</li>
 						</ul>
 					</nav>
@@ -69,7 +69,7 @@
 					<div class="content__breadcrumbs">
 						<ul class="breadcrumbs">
 							<li class="breadcrumbs__item">
-								<a class="breadcrumbs__item-link" href="./index.html">Главная</a>
+								<a class="breadcrumbs__item-link" href="./main.html">Главная</a>
 							</li>
 							<li class="breadcrumbs__item">
 								<p class="breadcrumbs__item-link breadcrumbs__item-link--active" href="#">Тарифы</p>
@@ -182,7 +182,7 @@
         </p>
       </div>
       <div class="footer__logo">
-        <a class="main__link" href="index.html"><img src="img/logo-fig.png" alt="логотип компании"></a>
+        <a class="main__link" href="main.html"><img src="img/logo-fig.png" alt="логотип компании"></a>
       </div>
       <div class="footer__social">
         <p class="footer__social-text">Наши социальные сети</p>
