--- a/reviews.html
+++ b/reviews.html
@@ -28,10 +28,19 @@
 					</div>
 
 					<div class="header__top-item--right">
-						<div class="contacts">
-							<a href="tel:+78000039210" class="number">8(800)00-392-10</a>
-							<a href="#" class="schedule_dropped">График работы</a>
-						</div>
+							<div class="contacts">
+									<a href="tel:+78000039210" class="number">8(800)00-392-10</a>
+									<div class="schedule__dropped-block">
+										<a href="#" class="schedule_dropped">График работы</a>
+										<div class="dropdown__schedule">
+											<ul class="dropdown__list">
+												<li class="dropdown__item1">пн-вс:  09:00-20:00</li>
+												<li class="dropdown__item2">обед:   14:00-14:30</li>
+											</ul>
+											<div  class="dropdown__schedule_triangle"></div>
+										</div>  
+									</div>
+								</div>
 					</div>
 
 				</div>
