--- a/main.html
+++ b/main.html
@@ -134,7 +134,7 @@
           <ul class="news__list">
             <li class="news__item">
               <div class="news__img">
-                <img class="news__img-item" src="img/news_pic/blackhole.png" alt="черная дыра">
+                <img class="news__img-item" src="img/news_pic/layer-6.jpg" alt="черная дыра">
               </div>
               <div class="news__content">
                 <div class="news__content-date">12.10.2016</div>
@@ -148,7 +148,7 @@
             <li class="news__item">
               <!-- SECOND ITEM -->
               <div class="news__img">
-                <img class="news__img-item" src="img/news_pic/fire.png" alt="фаер">
+                <img class="news__img-item" src="img/news_pic/layer-7.jpg" alt="фаер">
               </div>
               <div class="news__content">
                 <div class="news__content-date">01.02.2016</div>
@@ -162,7 +162,7 @@
             <li class="news__item">
               <!-- THIRD ITEM -->
               <div class="news__img">
-                <img class="news__img-item" src="img/news_pic/notebook.jpg" alt="рабочее место">
+                <img class="news__img-item" src="img/news_pic/layer-9.jpg" alt="рабочее место">
               </div>
               <div class="news__content">
                 <div class="news__content-date">22.12.2015</div>
