--- a/reviews.html
+++ b/reviews.html
@@ -21,14 +21,14 @@
 			<div class="header__top">
 				<div class="contain clearfix">
 
-					<div class="header__top-item--left">
+					<div class="header__top-info">
 						<a href="./main.html">
 						<img class="header__top-item-logo" src="img/logo-fig.png" alt="логотип компании">
 						</a>
-					</div>
+					
 
-					<div class="header__top-item--right">
-							<div class="contacts">
+					
+						<div class="contacts">
 									<a href="tel:+78000039210" class="number">8(800)00-392-10</a>
 									<div class="schedule__dropped-block">
 										<a href="#" class="schedule_dropped">График работы</a>
@@ -40,7 +40,7 @@
 											<div  class="dropdown__schedule_triangle"></div>
 										</div>  
 									</div>
-								</div>
+						</div>
 					</div>
 
 				</div>
