--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             <div class="contacts">
 									<a href="tel:+78000039210" class="number">8(800)00-392-10</a>
 									<div class="schedule__dropped-block">
-										<a href="#" class="schedule_dropped">График работы</a>
+										<span class="schedule_dropped">График работы</span>
 										<div class="dropdown__schedule">
 											<ul class="dropdown__list">
 												<li class="dropdown__item1">пн-вс:  09:00-20:00</li>
